# gymnasium

./: .env.example  .gitignore  README.md  pyproject.toml  reset-tunnel.sh  run.sh  start.sh
docs/: CLOUDFLARE_TUNNEL.md
labpapers/: __init__.py  cache.py  cli.py  config.py  http.py  model.py  pipeline.py  report.py  watchlist.py
labpapers/sources/: __init__.py  affiliations.py  anthropic_site.py  arxiv.py  arxiv_source.py  authors.py  base.py  openalex.py  openalex_source.py  watchlist_institutions.py  watchlist_people.py
labrepos/: __init__.py  cache.py  cli.py  config.py  http.py  model.py  pipeline.py  report.py  watchlist.py
labrepos/sources/: __init__.py  base.py  org_repos.py  user_events.py  user_repos.py
reports/: labpapers_2026-06-19_30d.json  labpapers_2026-06-19_30d.md  labpapers_2026-06-19_7d.json  labpapers_2026-06-19_7d.md  labrepos_2026-06-20_30d.json  labrepos_2026-06-20_30d.md
tests/: conftest.py  test_affiliations.py  test_anthropic_site.py  test_arxiv.py  test_authors.py  test_config.py  test_deepseek.py  test_feed.py  test_labrepos_config.py  test_labrepos_model.py  test_labrepos_org_source.py  test_labrepos_pipeline.py  test_labrepos_report.py  test_markdown_js.py  test_openalex.py  test_pipeline.py  test_report.py  test_topic_classification.py  test_university.py  test_watchlist.py
tests/fixtures/: anthropic_detail.html  anthropic_listing.html  arxiv_feed.xml  fake_opencode.py  github_org_repos.json  github_user_events.json  openalex_deepseek_v32.json  openalex_work.json  openalex_work_protein.json
tests/js/: test_markdown_render.mjs
university/: __init__.py  ai.py  auth.py  db.py  docs.py  feed.py  ingest.py  map_store.py  refresh.py  retrieval.py  server.py
university/web/: index.html  login.html
university/web/css/: app.css  colors_and_type.css  gym.css
university/web/js/: api.js  app.js  md.js  state.js
