[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labpapers"
version = "0.1.0"
description = "GenAI lab-paper tracker that ranks recent papers and researchers by author prominence (giant-weight)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gymnasium" }]
dependencies = [
    "requests>=2.28",
    "feedparser>=6.0",
    "beautifulsoup4>=4.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
labpapers = "labpapers.cli:main"
labrepos = "labrepos.cli:main"
gymnasium = "university.server:main"

[tool.setuptools.packages.find]
include = ["labpapers*", "labrepos*", "university*"]

[tool.setuptools.package-data]
university = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
